Brought over BitmaskEnum, Hash, and Log from K3.

--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -46,6 +46,9 @@
     <ClInclude Include="Math\Frustum.h">
       <Filter>Math</Filter>
     </ClInclude>
+    <ClInclude Include="BitmaskEnum.h" />
+    <ClInclude Include="Hash.h" />
+    <ClInclude Include="Log.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Stdafx.cpp" />
@@ -58,6 +61,8 @@
     <ClCompile Include="Math\Frustum.cpp">
       <Filter>Math</Filter>
     </ClCompile>
+    <ClCompile Include="Hash.cpp" />
+    <ClCompile Include="Log.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Graphics">
