--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -302,6 +302,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Profile12|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release12|x64'">true</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="VK\UtilityVk.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
