Support for most of the core Vulkan features.

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -277,6 +277,9 @@
     <ClInclude Include="Stdafx.h" />
     <ClInclude Include="Utility.h" />
     <ClInclude Include="VectorMath.h" />
+    <ClInclude Include="VK\DeviceFeatureHandlersVk.h" />
+    <ClInclude Include="VK\ExtensionManagerVk.h" />
+    <ClInclude Include="VK\ExtensionsVk.h" />
     <ClInclude Include="VK\GraphicsDeviceVk.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug12|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Profile12|x64'">true</ExcludedFromBuild>
@@ -328,6 +331,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release12|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Utility.cpp" />
+    <ClCompile Include="VK\ExtensionManagerVk.cpp" />
+    <ClCompile Include="VK\ExtensionsVk.cpp" />
     <ClCompile Include="VK\GraphicsDeviceVk.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug12|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Profile12|x64'">true</ExcludedFromBuild>
