--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -279,7 +279,10 @@
     <ClInclude Include="VectorMath.h" />
     <ClInclude Include="VK\DeviceFeatureHandlersVk.h" />
     <ClInclude Include="VK\ExtensionManagerVk.h" />
-    <ClInclude Include="VK\ExtensionsVk.h" />
+    <ClInclude Include="VK\Extensions\AMD\BufferMarkerAMD.h" />
+    <ClInclude Include="VK\Extensions\EXT\DebugUtilsEXT.h" />
+    <ClInclude Include="VK\Extensions\EXT\ValidationFeaturesEXT.h" />
+    <ClInclude Include="VK\Extensions\IExtensionVk.h" />
     <ClInclude Include="VK\GraphicsDeviceVk.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug12|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Profile12|x64'">true</ExcludedFromBuild>
@@ -332,12 +335,15 @@
     </ClCompile>
     <ClCompile Include="Utility.cpp" />
     <ClCompile Include="VK\ExtensionManagerVk.cpp" />
-    <ClCompile Include="VK\ExtensionsVk.cpp" />
+    <ClCompile Include="VK\Extensions\AMD\BufferMarkerAMD.cpp" />
+    <ClCompile Include="VK\Extensions\EXT\DebugUtilsEXT.cpp" />
+    <ClCompile Include="VK\Extensions\EXT\ValidationFeaturesEXT.cpp" />
     <ClCompile Include="VK\GraphicsDeviceVk.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug12|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Profile12|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release12|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="VK\GraphicsDevice_DebugVk.cpp" />
     <ClCompile Include="VK\GraphicsEnumsVk.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release12|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Profile12|x64'">true</ExcludedFromBuild>
