--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -254,6 +254,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='ProfileVk|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='ReleaseVk|x64'">true</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="Extern\VulkanMemoryAllocator\vk_mem_alloc.h" />
     <ClInclude Include="Filesystem.h" />
     <ClInclude Include="GraphicsDevice.h" />
     <ClInclude Include="GraphicsEnums.h" />
@@ -283,6 +284,7 @@
     <ClInclude Include="VK\Extensions\EXT\DebugUtilsEXT.h" />
     <ClInclude Include="VK\Extensions\EXT\ValidationFeaturesEXT.h" />
     <ClInclude Include="VK\Extensions\IExtensionVk.h" />
+    <ClInclude Include="VK\Extensions\KHR\SwapchainKHR.h" />
     <ClInclude Include="VK\GraphicsDeviceVk.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug12|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Profile12|x64'">true</ExcludedFromBuild>
@@ -338,6 +340,7 @@
     <ClCompile Include="VK\Extensions\AMD\BufferMarkerAMD.cpp" />
     <ClCompile Include="VK\Extensions\EXT\DebugUtilsEXT.cpp" />
     <ClCompile Include="VK\Extensions\EXT\ValidationFeaturesEXT.cpp" />
+    <ClCompile Include="VK\Extensions\KHR\SwapchainKHR.cpp" />
     <ClCompile Include="VK\GraphicsDeviceVk.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug12|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Profile12|x64'">true</ExcludedFromBuild>
@@ -352,6 +355,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Math\Functions.inl" />
+  </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="Extern\VulkanMemoryAllocator\vk_mem_alloc.natvis" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
