Checkpoint.  Loader and function wrappers for a bunch of Vulkan functions.

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -285,6 +285,7 @@
     <ClInclude Include="VK\Extensions\EXT\ValidationFeaturesEXT.h" />
     <ClInclude Include="VK\Extensions\IExtensionVk.h" />
     <ClInclude Include="VK\Extensions\KHR\SwapchainKHR.h" />
+    <ClInclude Include="VK\FunctionsVk.h" />
     <ClInclude Include="VK\GraphicsDeviceVk.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug12|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Profile12|x64'">true</ExcludedFromBuild>
@@ -295,6 +296,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Profile12|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug12|x64'">true</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="VK\LoaderVk.h" />
     <ClInclude Include="VK\RefCountVk.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release12|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Profile12|x64'">true</ExcludedFromBuild>
@@ -341,6 +343,7 @@
     <ClCompile Include="VK\Extensions\EXT\DebugUtilsEXT.cpp" />
     <ClCompile Include="VK\Extensions\EXT\ValidationFeaturesEXT.cpp" />
     <ClCompile Include="VK\Extensions\KHR\SwapchainKHR.cpp" />
+    <ClCompile Include="VK\FunctionsVk.cpp" />
     <ClCompile Include="VK\GraphicsDeviceVk.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug12|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Profile12|x64'">true</ExcludedFromBuild>
@@ -351,6 +354,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Profile12|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug12|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="VK\LoaderVk.cpp" />
     <ClCompile Include="VK\RefCountVk.cpp" />
   </ItemGroup>
   <ItemGroup>
